[package]
name = "crateplace"
authors = ["Guayo Peerdeman"]
description = "A tool to control the placement of crates in flash for embedded projects"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT"

[[bin]]
name = "cargo-crateplace"
path = "src/main.rs"

[dependencies]
cargo_metadata = "0.23.1"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
gimli = "0.33.0"
glob = "0.3.3"
indoc = "2.0.7"
object = "0.39.1"
regex = "1.12.4"
rustc-demangle = "0.1.27"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
